// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kwark render \`style\` attribute 1`] = `
<DocumentFragment>
  <div
    class="hello-world"
    style="color: red;"
  >
    Hello World
  </div>
</DocumentFragment>
`;

exports[`kwark render wrapElement using \`useHook\` prop 1`] = `
<DocumentFragment>
  <a>
    :
    <div
      class="child-element world"
    >
      Hello
    </div>
    :
  </a>
</DocumentFragment>
`;

exports[`kwark renders 1`] = `
<DocumentFragment>
  <div>
    Hello World
  </div>
</DocumentFragment>
`;
